[gd_scene load_steps=4 format=2]

[ext_resource path="res://mocraAdventure/map_editor/editor.gd" type="Script" id=1]
[ext_resource path="res://images/default.png" type="Texture2D" id=3]
[ext_resource path="res://Theme/default/theme.tres" type="Theme" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 963, 540 )

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="GUI" type="Control" parent="Camera2D/CanvasLayer"]
visible = false

[node name="saveButton" type="Button" parent="Camera2D/CanvasLayer/GUI"]
offset_left = 1750.0
offset_right = 1977.0
offset_bottom = 98.0
scale = Vector2( 0.75, 0.75 )
theme = ExtResource( 4 )
theme_type_variation = "button_green"
text = "SAVE"

[node name="cameraZoomVSlider" type="VSlider" parent="Camera2D/CanvasLayer/GUI"]
offset_left = 1839.0
offset_top = 97.0
offset_right = 1889.0
offset_bottom = 297.0
min_value = 1.0
max_value = 2.0
step = 0.01
value = 1.0
scrollable = false

[node name="cameraZoomLabel" type="Label" parent="Camera2D/CanvasLayer/GUI/cameraZoomVSlider"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -116.0
offset_right = 45.5
offset_bottom = -102.0
text = "Camera3D Zoom"

[node name="cameraSpeedVSlider" type="VSlider" parent="Camera2D/CanvasLayer/GUI"]
offset_left = 1840.0
offset_top = 313.0
offset_right = 1890.0
offset_bottom = 513.0
max_value = 10.0
step = 0.5
value = 1.0

[node name="cameraSpeedLabel" type="Label" parent="Camera2D/CanvasLayer/GUI/cameraSpeedVSlider"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -116.0
offset_right = 45.5
offset_bottom = -102.0
text = "Camera3D Speed"

[node name="deleteEntityButton" type="Button" parent="Camera2D/CanvasLayer/GUI"]
offset_left = 45.0
offset_top = 29.0
offset_right = 589.0
offset_bottom = 146.0
scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 4 )
theme_type_variation = "button_red"
toggle_mode = true
text = "Delete Entity"

[node name="gameScriptButton" type="Button" parent="Camera2D/CanvasLayer/GUI"]
offset_left = 352.0
offset_top = 29.0
offset_right = 961.0
offset_bottom = 143.0
scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 4 )
text = "My game script"

[node name="CheckBox" type="CheckBox" parent="Camera2D/CanvasLayer/GUI"]
offset_left = 672.0
offset_top = 29.0
offset_right = 813.0
offset_bottom = 53.0
text = "auto vertical align"

[node name="CheckBox2" type="CheckBox" parent="Camera2D/CanvasLayer/GUI"]
offset_left = 672.0
offset_top = 53.0
offset_right = 813.0
offset_bottom = 77.0
text = "auto horizontal align"

[node name="EntityLabel" type="Label" parent="Camera2D/CanvasLayer/GUI"]
offset_left = 880.0
offset_top = 52.0
offset_right = 970.0
offset_bottom = 66.0
text = "0/200 entities"

[node name="errorLabel" type="Label" parent="Camera2D/CanvasLayer/GUI"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1568.0
offset_top = 29.0
offset_right = 1747.0
offset_bottom = 43.0
grow_horizontal = 0
custom_colors/font_color = Color( 0.176471, 0.498039, 0.87451, 1 )
text = "can't save your map without"

[node name="tileAlignCheckBox" type="CheckBox" parent="Camera2D/CanvasLayer/GUI"]
offset_left = 1019.0
offset_top = 23.0
offset_right = 1152.0
offset_bottom = 47.0
text = "auto tile align /!\\"

[node name="script_editor" type="Control" parent="."]
visible = false
offset_right = 1920.0
offset_bottom = 1080.0
custom_minimum_size = Vector2( 1920, 1080 )
theme = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="script_editor"]
offset_right = 960.0
offset_bottom = 600.0
custom_minimum_size = Vector2( 960, 600 )
texture = ExtResource( 3 )
expand = true

[node name="addSciptButton" type="Button" parent="script_editor"]
offset_left = 352.0
offset_top = 620.0
offset_right = 542.0
offset_bottom = 705.0
text = "+"

[node name="VBoxContainer" type="VBoxContainer" parent="script_editor"]
offset_right = 960.0
offset_bottom = 600.0

[node name="scriptEditorCamera" type="Camera2D" parent="script_editor"]
offset = Vector2( 960, 540 )

[node name="backButton" type="Button" parent="script_editor"]
offset_left = 1582.0
offset_right = 1909.0
offset_bottom = 99.0
text = "Back"

[connection signal="dialog_entered" from="." to="." method="_on_Node2D_dialog_entered"]
[connection signal="entity_selected" from="." to="." method="_on_Node2D_entity_selected"]
[connection signal="init_editor" from="." to="." method="_on_Node2D_init_editor"]
[connection signal="remove_script_state" from="." to="." method="_on_Node2D_remove_script_state"]
[connection signal="tile_selected" from="." to="." method="_on_Node2D_tile_selected"]
[connection signal="pressed" from="Camera2D/CanvasLayer/GUI/saveButton" to="." method="_on_saveButton_pressed"]
[connection signal="value_changed" from="Camera2D/CanvasLayer/GUI/cameraZoomVSlider" to="." method="_on_cameraZoomVSlider_value_changed"]
[connection signal="value_changed" from="Camera2D/CanvasLayer/GUI/cameraSpeedVSlider" to="." method="_on_cameraSpeedVSlider_value_changed"]
[connection signal="toggled" from="Camera2D/CanvasLayer/GUI/deleteEntityButton" to="." method="_on_deleteEntityButton_toggled"]
[connection signal="pressed" from="Camera2D/CanvasLayer/GUI/gameScriptButton" to="." method="_on_gameScriptButton_pressed"]
[connection signal="toggled" from="Camera2D/CanvasLayer/GUI/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="toggled" from="Camera2D/CanvasLayer/GUI/CheckBox2" to="." method="_on_CheckBox2_toggled"]
[connection signal="toggled" from="Camera2D/CanvasLayer/GUI/tileAlignCheckBox" to="." method="_on_tileAlignCheckBox_toggled"]
[connection signal="pressed" from="script_editor/addSciptButton" to="." method="_on_addSciptButton_pressed"]
[connection signal="pressed" from="script_editor/backButton" to="." method="_on_backButton_pressed"]
